--- a/lang/es.json
+++ b/lang/es.json
@@ -77,7 +77,9 @@
     "Leave": "Abandonar",
     "Leave Team": "Abandonar equipo",
     "Login": "Iniciar sesión",
+    "Log in": "Iniciar sesión",
     "Logout": "Finalizar sesión",
+    "Log Out": "Finalizar sesión",
     "Logout Other Browser Sessions": "Cerrar las demás sesiones",
     "Manage Account": "Administrar cuenta",
     "Manage and logout your active sessions on other browsers and devices.": "Administre y cierre sus sesiones activas en otros navegadores y dispositivos.",
@@ -210,5 +212,11 @@
     "Drop here to upload": "Suelta aquí para subir",
     "Up to :size": "Hasta :size",
     "Browse files": "Búsqueda de archivos",
-    "Drop here or": "Déjalo aquí o"
+    "Settings": "Configuraciones",
+    "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "Para finalizar la activación de la autenticación de dos factores, escanea el siguiente código QR utilizando la aplicación de autenticación de tu teléfono o introduce la clave de configuración y proporciona el código OTP generado.",
+    "Manage and log out your active sessions on other browsers and devices.": "Administra y cierra sesión en tus sesiones activas en otros navegadores y dispositivos.",
+    "Drop here or": "Déjalo aquí o",
+    "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "Por favor, ingresa tu contraseña para confirmar que deseas cerrar sesión en tus otras sesiones de navegador en todos tus dispositivos.",
+    "Log Out Other Browser Sessions": "Cerrar sesión en otras sesiones del navegador",
+    "If necessary, you may log out of all of your other browser sessions across all of your devices. Some of your recent sessions are listed below; however, this list may not be exhaustive. If you feel your account has been compromised, you should also update your password.": "Si es necesario, puedes cerrar sesión en todas tus otras sesiones de navegador en todos tus dispositivos. Algunas de tus sesiones recientes se enumeran a continuación; sin embargo, esta lista puede no ser exhaustiva. Si sientes que tu cuenta ha sido comprometida, también deberías actualizar tu contraseña."
 }
