Últimos cambios de verificación y optimización del proceso

--- a/lang/es.json
+++ b/lang/es.json
@@ -201,11 +201,14 @@
     "Your email address is not verified.": "Su dirección de correo electrónico no está verificada.",
     "status:pending": "Pendiente",
     "status:progress": "Procesando",
+    "status:reading": "Procesando",
+    "status:sending": "Enviando",
     "status:error": "Error",
     "status:done": "Procesado",
-    "status:email:pending": "Por enviar",
-    "status:email:progress": "Enviando",
-    "status:email:error": "Error de envio",
+    "status:email:pending": "Pendiente por enviar",
+    "status:email:sending": "Enviando",
+    "status:email:progress": "Procesando",
+    "status:email:error": "Error",
     "status:email:done": "Enviado",
     "Upload files": "Subir archivo/s",
     "Loading": "Cargando",
